--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -42,13 +42,12 @@
           </ul>
         </div>
 
-        <div class="footer-column">
+<div class="footer-column">
   <h4>Quick Links</h4>
   <ul>
-    <li><a href="/#pricing">Pricing</a></li>
     <li><a href="/#features">Features</a></li>
-    <li><a href="/pages/about">About</a></li>
-    <li><a href="/pages/contact">Contact</a></li>
+    <li><a href="/#pricing">Pricing</a></li>
+    <li><a href="/#faq">FAQ</a></li>
   </ul>
 </div>
 
