--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -48,6 +48,7 @@
     <li><a href="/#features">Features</a></li>
     <li><a href="/#pricing">Pricing</a></li>
     <li><a href="/#faq">FAQ</a></li>
+    <li><a href="/pages/contact">Contact</a></li>
   </ul>
 </div>
 
