--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -45,6 +45,7 @@
 <div class="footer-column">
   <h4>Quick Links</h4>
   <ul>
+    <li><a href="/#how-it-works">How It Works</a></li>
     <li><a href="/#features">Features</a></li>
     <li><a href="/#pricing">Pricing</a></li>
     <li><a href="/#faq">FAQ</a></li>
