--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -13,6 +13,7 @@
     </a>
     
 <ul class="nav-links">
+  <li><a href="/#how-it-works">How It Works</a></li>
   <li><a href="/#features">Features</a></li>
   <li><a href="/#pricing">Pricing</a></li>
   <li><a href="/#faq">FAQ</a></li>
@@ -55,6 +56,7 @@
 
 <div class="mobile-menu">
   <ul class="mobile-nav-links">
+    <li><a href="/#how-it-works">How It Works</a></li>
     <li><a href="/#features">Features</a></li>
     <li><a href="/#pricing">Pricing</a></li>
     <li><a href="/#faq">FAQ</a></li>
